# quack

./: .editorconfig  Cargo.toml  deny.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: deploy.yml
assets/: main.css
src/: main.rs
