[package]
name = "quack"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
fastrand = { version = "2.0.0", features = ["js"] }
gloo-storage = "0.3.0"
leptos = { version = "0.5.0-beta2", features = ["csr"] }
log = { version = "0.4.20", features = ["release_max_level_off"] }
serde = { version = "1.0.188", features = ["derive"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["HtmlAudioElement"] }

[profile.release]
lto = true
opt-level = "z"
